--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
   font-weight: 100;
   font-size: 40px;
   margin: 40px 0px 20px;
+	text-decoration: none;
 }
 
 #clockdiv{
@@ -61,6 +62,6 @@ h1{
 	border: 50px solid transparent;
 	border-top: 70px solid #F8F4E8;
 }
-a{
-	text-decoration: none;
+a:hover, a:visited, a:link, a:active{
+  text-decoration: none;
 }
